<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:scaleType="centerInside"
                android:soundEffectsEnabled="true"
                android:src="@drawable/ic_arrow_back_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CardInformationDisplay">

        <TextView
            android:id="@+id/card_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/card_information"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:divider="@android:color/background_dark"
            android:orientation="horizontal"
            android:padding="20dp"
            android:showDividers="middle|beginning|end"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_info">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/card_brand_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/card_brand"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/card_brand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Null"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/card_type_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/card_type"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/card_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Null"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp">

                <TextView
                    android:id="@+id/bank_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/bank"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bank"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Null"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/country_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/country"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Null"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/mainmenu"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
